clang/test/BSC/Negative/Ownership/Owned/safe_free_nested_owned_pointer/safe_free_nested_owned_pointer.cbs
// RUN: %clang_cc1 -verify %s 

void*malloc(unsigned long);
void free(void *);
T* _Owned safe_malloc<T>(T value) {
  T * p = (T *) malloc( sizeof(T) );
  *p = value;
  return (T* _Owned)p;
}

void safe_free<T>(T* _Owned p) {
  free( (T*)p );
}

void test_double_pointer_ok() {
  int* _Owned inner = safe_malloc(1);
  int* _Owned * _Owned outer = safe_malloc(inner);
  int* _Owned * _Owned * _Owned ultraout = safe_malloc(outer);
  safe_free((void *_Owned)**ultraout);
  safe_free((void *_Owned)ultraout);  //expected-error {{invalid cast to `void * _Owned` of not all moved value: `ultraout`, *ultraout is _Owned}}
}
int main(){
  test_double_pointer_ok();
  return 0;
}